Fix extra table bottom spacing.
Fixes #2014

--- a/core/src/main/web/app/app.scss
+++ b/core/src/main/web/app/app.scss
@@ -268,12 +268,6 @@ background-color: rgb(205, 223, 214);
   white-space: nowrap;
 }
 
-.bko-table-bottom {
-  padding-top: 10px;
-  overflow: hidden;
-  white-space: nowrap;
-}
-
 .bko-table-selector {
   padding-top: 10px;
   float: left;
@@ -291,7 +285,6 @@ background-color: rgb(205, 223, 214);
 }
 
 .bko-table {
-  top: -19px;
   left: -1px;
   position: relative;
 }
