--- a/core/src/main/web/app/styles/datatables.scss
+++ b/core/src/main/web/app/styles/datatables.scss
@@ -43,6 +43,7 @@ div.dtmenu {
   color: #73BE3B;
   cursor: pointer;
   display: inline-block;
+  margin-bottom: -19px;
   &:hover {
     color: #FFF;
     background-color: #39A9ED;
